--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.5.0",
+    "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-dom": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.4",
     "react-test-renderer": "18.2.0",
