fix: add missing files
fix: remove console.log

feat: add phone-book.apk

remove unwanted file

--- a/app.json
+++ b/app.json
@@ -36,6 +36,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "3f636422-e793-4a4b-9ea3-a02eb093b1e9"
+      }
     }
   }
 }
